tests/NormalTests/paczka1/small_fuzzy/65618252.err
Error in line 1: ljlN A991 45,8
Error in line 9: FMBvXXZU A991 53,5
Error in line 15: sNhAg7izEMb A991 85,1
